--- a/2.Code/s2-data-analysis.Rmd
+++ b/2.Code/s2-data-analysis.Rmd
@@ -519,6 +519,7 @@ install.packages('gsynth', type = 'source')
 library(gsynth)
 
 ```
+
 ```{r}
 
 data(gsynth)
@@ -591,39 +592,39 @@ plot(out, type = "loadings")
 
 ```{r }
 library(readstata13)
+library(here)
+panel_use <-read.dta13(here("Stata", "county_week_panel_1201.dta"))
+panel_use$treatment <- panel_use$tre * panel_use$q4_high_it_budget_median
 
-panel_use <-read.dta13(here("Stata", "county_week_panel_aug_analysis.dta"))
+demo <- panel_use %>% filter(!is.na(initclaims_rate_regular) & !is.na(avg_home_prop) & !is.na( avg_new_death_rate) &!is.na(avg_new_case_rate))
 
-
-```
-
-
-
-```{r}
-
-panelView(initclaims_rate_regular ~ treated, data = panel_use,  index = c("county", "week"), pre.post = TRUE, by.timing = TRUE)
-```
-
-```{r}
-
-panelView(initclaims_rate_regular ~ treated , data = panel_use,  index = c("county", "week"),type  = "outcome", main = "EDR Reform and Turnout", by.group = TRUE)
+demo1 <- demo %>% select(county, week, treatment, initclaims_rate_regular) %>% head(1000)
 
 ```
 
 
 
 ```{r}
-
-demo <- panel_use %>% filter(!is.na(initclaims_rate_regular) & !is.na(avg_home_prop) & !is.na( avg_new_death_rate) &!is.na(avg_new_case_rate)) %>% 
-                      filter(!is.na())
-
-out <- gsynth(initclaims_rate_regular ~  treated + avg_home_prop +  avg_new_death_rate + avg_new_case_rate  , data = demo,  index = c("county", "week"), se = TRUE, inference = "nonparametric", r = c(0, 4), CV = TRUE, force = "two-way", nboots = 1000, min.T0 = 6,  seed = 02139)
+panelView(initclaims_rate_regular ~ treatment, data = demo1,  index = c("county", "week"), pre.post = TRUE, by.timing = TRUE)
 ```
 
+
+
+
+```{r}
+out <- gsynth(initclaims_rate_regular ~  treatment + avg_home_prop +  avg_new_death_rate + avg_new_case_rate, data = demo,  index = c("county", "week"), se = TRUE, inference = "nonparametric", r = c(0, 4), CV = TRUE, force = "two-way", min.T0 = 6,  seed = 02139)
+
+
+```
+
+```{r}
+out <- gsynth(initclaims_rate_regular ~  treatment + avg_home_prop +  avg_new_death_rate + avg_new_case_rate, data = demo,  index = c("county", "week"), se = TRUE, inference = "nonparametric", r = c(0, 4), CV = TRUE, force = "two-way", min.T0 = 7,  seed = 30000)
+```
 
 ```{r}
 plot(out)
 ```
+
 ```{r}
 plot(out, type = "counterfactual", raw = "none", main="")
 ```
